update missing tenant permission
