# docs/swagger.json
@@ -5033,6 +5033,7 @@
 				"security": [
 					{
 						"jwtToken": [
+							"Tenant",
 							"Tender:Create"
 						]
 					}
@@ -5075,6 +5076,7 @@
 				"security": [
 					{
 						"jwtToken": [
+							"Tenant",
 							"Tender:List"
 						]
 					}
@@ -5169,6 +5171,7 @@
 				"security": [
 					{
 						"jwtToken": [
+							"Tenant",
 							"Tender:Create"
 						]
 					}
@@ -5217,6 +5220,7 @@
 				"security": [
 					{
 						"jwtToken": [
+							"Tenant",
 							"Tender:Create"
 						]
 					}
@@ -6848,6 +6852,7 @@
 				"security": [
 					{
 						"jwtToken": [
+							"Tenant",
 							"Project:List"
 						]
 					}
